--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, inital-scale=1" />
-    </head>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, inital-scale=1" />
+
+    <title>{% block title %} Honours Project Application {% endblock %}</title>
+    {% block head %}
+    {% endblock %}
+</head>
+
+<body>
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
+</body>
+
 </html>
