--- a/app/templates/auth/register_patient.html
+++ b/app/templates/auth/register_patient.html
@@ -1,15 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-
 <div class="container">
     <div class="row">
         <div class="col-6">
             <div class="card">
-                <h5 class="card-header">Login</h5>
+                <h5 class="card-header">Register Account</h5>
                 <div class="card-body">
-                    <form method="POST">
+                    <form method = "POST" action="{{ url_for('auth.register_patient') }}">
                         {{ form.csrf_token }}
+                        <div class="form-group">
+                            {{ form.first_name.label }}
+                            {{ form.first_name(class="form-control", placeholder="First Name...") }}
+                        </div>
+                        <div class="form-group">
+                            {{ form.surname.label }}
+                            {{ form.surname(class="form-control", placeholder="Surname...") }}
+                        </div>
                         <div class="form-group">
                             {{ form.email.label }}
                             {{ form.email(class="form-control", placeholder="Email...") }}
@@ -17,6 +24,10 @@
                         <div class="form-group">
                             {{ form.password.label }}
                             {{ form.password(class="form-control", placeholder="Password...") }}
+                        </div>
+                        <div class="form-group">
+                            {{ form.confirm_password.label }}
+                            {{ form.confirm_password(class="form-control", placeholder="Confirm Password...")}}
                         </div>
                         <div class="form-group">
                             {{ form.submit(class="btn btn-secondary") }}
@@ -27,5 +38,6 @@
         </div>
     </div>
 </div>
+
 
 {% endblock %}
