--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,9 +28,14 @@
         </button>
         <a class="navbar-brand" href="/">Emotional Recognition Honours Project</a>
         <div class="collapse navbar-collapse" id="navbar">
-            {% if current_user.is_authenticated %}
-            <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-            {% endif %}
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" id="questionnaires" href="/questionnaires_page">Questionnaires</a>
+                <a class="nav-item nav-link" id="register" href="/register_patient">Register Patient</a>
+                <a class="nav-item nav-link" id="login" href="/login">Login</a>
+                {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+                {% endif %}
+            </div>
         </div>
     </nav>
 
