--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,10 +7,19 @@
     <meta name="viewport" content="width=device-width, inital-scale=1" />
 
     <!-- Imported CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <!-- Imported Scripts -->
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+        crossorigin="anonymous"></script>
+
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
     <title>{% block title %} Honours Project Application {% endblock %}</title>
@@ -30,10 +39,14 @@
         <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" id="questionnaires" href="/questionnaires_page">Questionnaires</a>
-                <a class="nav-item nav-link" id="register" href="/register_patient">Register Patient</a>
-                <a class="nav-item nav-link" id="login" href="/login">Login</a>
+                <a class="nav-item nav-link" id="model_page" href="/model_test">Model Test Page</a>
+            </div>
+            <div class="navbar-nav ms-auto">
                 {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+                {% else %}
+                <a class="nav-item nav-link" id="register" href="/register_patient">Register Account</a>
+                <a class="nav-item nav-link" id="login" href="/login">Login</a>
                 {% endif %}
             </div>
         </div>
@@ -45,7 +58,7 @@
     {% if category == 'error' %}
     <div class="alert alert-danger alter-dismissable fade show">
         {{ message }}
-        <button type = "button" class="close" data-dismiss="alert">
+        <button type="button" class="close" data-dismiss="alert">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
@@ -66,5 +79,9 @@
         {% endblock %}
     </main>
 </body>
+
+{% block scripts %}
+
+{% endblock %}
 
 </html>
