--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -6,6 +6,8 @@
 
 {% block content %}
 
-<h1> This is the landing page </h1>
+<div class="container">
+    <h1> This is the landing page </h1>
+</div>
 
 {% endblock %}
