Some further work

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,6 +38,7 @@
         <a class="navbar-brand" href="/">Emotional Recognition Honours Project</a>
         <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav">
+                <a class="nav-item nav-link" id="therapy" href="/therapy_page">Therapy</a>
                 <a class="nav-item nav-link" id="questionnaires" href="/questionnaires_page">Questionnaires</a>
                 <a class="nav-item nav-link" id="model_page" href="/model_test">Model Test Page</a>
             </div>
