--- a/app/templates/questionnaires_page.html
+++ b/app/templates/questionnaires_page.html
@@ -13,7 +13,7 @@
                     </p>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-secondary" type="button" id="start-phq-questionnaire">Take PHQ-9 Questionnaire</button>
+                    <a href="{{ url_for('main.phq9_questionnaire') }}" class="btn btn-secondary">Take PHQ-9 Questionnaire</a>
                 </div>
             </div>
         </div>
