Added GAD7 questionnaire and the model pre-processing/prediction function. May need refactored based on new model architecture.

--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -1,13 +1,26 @@
 {% extends "base.html" %}
 
 {% block head %}
-
 {% endblock %}
 
 {% block content %}
 
-<div class="container">
-    <h1> This is the landing page </h1>
+<div class="container-fluid px-0">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="p-5 bg-primary text-white centered">
+                Mental Health
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6">
+            1
+        </div>
+        <div class="col-6">
+            2
+        </div>
+    </div>
 </div>
 
 {% endblock %}
