--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-    <h3> Hello, {{first_name}}! </h3>
+    <h3> Profile Page User: {{ name }} </h3>
 </div>
 
 {% endblock %}
