--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,6 +44,7 @@
             </div>
             <div class="navbar-nav ms-auto">
                 {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" id="profile" href="/profile_page">Profile</a>
                 <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
                 {% else %}
                 <a class="nav-item nav-link" id="register" href="/register_patient">Register Account</a>
