--- a/app/templates/questionnaires/GAD7.html
+++ b/app/templates/questionnaires/GAD7.html
@@ -8,13 +8,12 @@
 
 {% else %}
 
-<div class="container">
-    <div class="card">
+<div class="container h-100 d-flex align-items-center justify-content-center">
+    <div class="card align-items-center">
         <h3 class="card-header">GAD-7 Questionnaire</h3>
-        <div class="card-body">
-            <form id="questionnaire-form" method="POST" action="{{ url_for('main.gad7_questionnaire') }}">
-                {{ form.csrf_token}}
-
+        <form id="questionnaire-form" method="POST" action="{{ url_for('main.gad7_questionnaire') }}">
+            {{ form.csrf_token}}
+            <div class="card-body">
                 <div class="question" id="question1">
                     <label for="{{ form.question1.id }}">{{ form.question1.label}}</label>
                     {{ form.question1 (name='question1') }}
@@ -49,12 +48,13 @@
                     <label for="{{ form.question7.id }}">{{ form.question7.label }}</label>
                     {{ form.question7 (name='question7') }}
                 </div>
-
-                <button class="btn btn-secondary" id="last" type="button" onclick="previousQuestion();">Previous</button>
+            </div>
+            <div class="card-footer">
+                <button class="btn btn-secondary" id="last" type="button"
+                    onclick="previousQuestion();">Previous</button>
                 <button class="btn btn-secondary" id="next" type="button" onclick="nextQuestion();">Next</button>
-            
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
 </div>
 
