--- a/app/templates/questionnaires_page.html
+++ b/app/templates/questionnaires_page.html
@@ -27,7 +27,7 @@
                     </p>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-secondary" type="button" id="start-gad-questionnaire">Take GAD-7 Questionnaire</button>
+                    <a href="{{ url_for('main.gad7_questionnaire') }}" class="btn btn-secondary">Take GAD-7 Questionnaire</a>
                 </div>
             </div>
         </div>
