Further functionality added. Model now functional with questionnaires

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,9 +38,11 @@
         <a class="navbar-brand" href="/">Emotional Recognition Honours Project</a>
         <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav">
+                {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" id="therapy" href="/therapy_page">Therapy</a>
                 <a class="nav-item nav-link" id="questionnaires" href="/questionnaires_page">Questionnaires</a>
                 <a class="nav-item nav-link" id="model_page" href="/model_test">Model Test Page</a>
+                {% endif %}
             </div>
             <div class="navbar-nav ms-auto">
                 {% if current_user.is_authenticated %}
@@ -58,14 +60,14 @@
     {% if messages %}
     {% for category, message in messages %}
     {% if category == 'error' %}
-    <div class="alert alert-danger alter-dismissable fade show">
+    <div class="alert alert-danger alter-dismissable fade show" role="alert">
         {{ message }}
         <button type="button" class="close" data-dismiss="alert">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     {% else %}
-    <div class="alert alert-success alter-dismissable fade show">
+    <div class="alert alert-success alter-dismissable fade show" role="alert">
         {{ message }}
         <button type="button" class="close" data-dismiss="alert">
             <span aria-hidden="true">&times;</span>
