--- a/app/templates/questionnaires_page.html
+++ b/app/templates/questionnaires_page.html
@@ -1,68 +1,95 @@
 {% extends "base.html" %}
 
+{% block head %}
+
+<style>
+    .card-group {
+        display:flex;
+    }
+</style>
+
+{% endblock %}
+
 {% block content %}
 
-<div class="container">
+<div class="container-fluid px-0">
     <div class="row">
-        <div class="col-6">
-            <div class="card" id="PHQ9">
-                <h3 class="card-header">PHQ-9 Questionnaire</h3>
-                <div class="card-body">
-                    <p>
-                        This is a questionnaire designed to gauge the severeity/presence of depressive symptoms.
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <a href="{{ url_for('main.phq9_questionnaire') }}" class="btn btn-secondary">Take PHQ-9 Questionnaire</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-6">
-            <div class="card" id="GAD7">
-                <h3 class="card-header">GAD-7 Questionnaire</h3>
-                <div class="card-body">
-                    <p>
-                        This is a questionnaire designed to gauge the severeity/presence of generalised anxiety disorder symptoms.
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <a href="{{ url_for('main.gad7_questionnaire') }}" class="btn btn-secondary">Take GAD-7 Questionnaire</a>
-                </div>
+        <div class="col-lg-12">
+            <div class="p-5 bg-primary text-white centered">
+                Mental Health
             </div>
         </div>
     </div>
+</div>
 
+<div class="container">
     <div class="row">
-
-        <div class="col-6">
-            <div class="card" id="SPIN">
-                <h3 class="card-header">Social Anxiety Inventory Questionnaire</h3>
-                <div class="card-body">
-                    <p>
-                        This is a questionnaire designed to gauge the severeity/prescence of social anxiety disorder symptoms
-                    </p>
+        <div class="card-group" >
+            <div class="col-6">
+                <div class="card" id="PHQ9">
+                    <h3 class="card-header">PHQ-9 Questionnaire</h3>
+                    <div class="card-body">
+                        <p>
+                            This is a questionnaire designed to gauge the severeity/presence of depressive symptoms.
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="{{ url_for('main.phq9_questionnaire') }}" class="btn btn-secondary">Take PHQ-9
+                            Questionnaire</a>
+                    </div>
                 </div>
-                <div class="card-footer">
-                    <button class="btn btn-secondary" type="button" id="start-spin-questionnaire">Take SPIN questionnaire</button>
+            </div>
+
+            <div class="col-6">
+                <div class="card" id="GAD7">
+                    <h3 class="card-header">GAD-7 Questionnaire</h3>
+                    <div class="card-body">
+                        <p>
+                            This is a questionnaire designed to gauge the severeity/presence of generalised anxiety
+                            disorder symptoms.
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="{{ url_for('main.gad7_questionnaire') }}" class="btn btn-secondary">Take GAD-7
+                            Questionnaire</a>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="col-6">
-            <div class="card" id="PCL5">
-                <h3 class="card-header">PCL-5 Questionnaire</h3>
-                <div class="card-body">
-                    <p>
-                        This is a questionnaire designed to gauge the severeity/prescence of PTSD symptoms.
-                    </p>
+        <div class="row">
+
+            <div class="col-6">
+                <div class="card" id="SPIN">
+                    <h3 class="card-header">Social Anxiety Inventory Questionnaire</h3>
+                    <div class="card-body">
+                        <p>
+                            This is a questionnaire designed to gauge the severeity/prescence of social anxiety disorder
+                            symptoms
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-secondary" type="button" id="start-spin-questionnaire">Take SPIN
+                            questionnaire</button>
+                    </div>
                 </div>
-                <div class="card-footer">
-                    <button class="btn btn-secondary" type="button" id="start-pcl-questionnaire">Take PCL-5 Questionnaire</button>
+            </div>
+
+            <div class="col-6">
+                <div class="card" id="PCL5">
+                    <h3 class="card-header">PCL-5 Questionnaire</h3>
+                    <div class="card-body">
+                        <p>
+                            This is a questionnaire designed to gauge the severeity/prescence of PTSD symptoms.
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-secondary" type="button" id="start-pcl-questionnaire">Take PCL-5
+                            Questionnaire</button>
+                    </div>
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 
