Refactored authorisation routes to allow for therapist account now

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,7 +48,7 @@
                 <a class="nav-item nav-link" id="profile" href="/profile_page">Profile</a>
                 <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
                 {% else %}
-                <a class="nav-item nav-link" id="register" href="/register_patient">Register Account</a>
+                <a class="nav-item nav-link" id="register" href="/register_user">Register Account</a>
                 <a class="nav-item nav-link" id="login" href="/login">Login</a>
                 {% endif %}
             </div>
