--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<div class="container">
-    <div class="row">
+<div class="container d-flex justify-content-center align-items-center" style="height: 80vh">
+    <div class="row" style="width:50%;">
         <div class="col-12">
             <div class="card">
                 <h5 class="card-header">Login</h5>
@@ -14,10 +14,12 @@
                             {{ form.email.label }}
                             {{ form.email(class="form-control", placeholder="Email...") }}
                         </div>
+                        <br />
                         <div class="form-group">
                             {{ form.password.label }}
                             {{ form.password(class="form-control", placeholder="Password...") }}
                         </div>
+                        <br />
                         <div class="form-group">
                             {{ form.submit(class="btn btn-secondary") }}
                         </div>
