--- a/app/templates/auth/register_patient.html
+++ b/app/templates/auth/register_patient.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
+<div class="container d-flex justify-content-center align-items-center" style="height: 80vh;">
     <div class="row">
         <div class="col-12">
             <div class="card">
                 <h5 class="card-header">Register Account</h5>
                 <div class="card-body">
-                    <form method = "POST" action="{{ url_for('auth.register_patient') }}">
+                    <form method = "POST" action="{{ url_for('auth.register_user') }}">
                         {{ form.csrf_token }}
                         <div class="row">
                             <div class="col-6">
@@ -23,18 +23,22 @@
                                 </div>
                             </div>
                         </div>
+                        <br />
                         <div class="form-group">
                             {{ form.email.label }}
                             {{ form.email(class="form-control", placeholder="Email...") }}
                         </div>
+                        <br />
                         <div class="form-group">
                             {{ form.password.label }}
                             {{ form.password(class="form-control", placeholder="Password...") }}
                         </div>
+                        <br />
                         <div class="form-group">
                             {{ form.confirm_password.label }}
                             {{ form.confirm_password(class="form-control", placeholder="Confirm Password...")}}
                         </div>
+                        <br />
                         <div class="form-group">
                             {{ form.account_type.label }}
                             {{ form.account_type(class="form-control") }}
