--- a/app/templates/therapist_user/therapist_dash.html
+++ b/app/templates/therapist_user/therapist_dash.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
-<h2> Family Therapy </h2>
+<div class="container">
+    <h2> Family Therapy </h2>
+</div>
 
 {% endblock %}
