--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
+    <!-- DataTable CSS -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
+
     <!-- Imported Scripts -->
 
     <!-- Bootstrap JS -->
@@ -20,7 +23,12 @@
         crossorigin="anonymous"></script>
 
     <!-- jQuery -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
+    <!-- Datatables JS -->
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+
 
     <title>{% block title %} Honours Project Application {% endblock %}</title>
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
@@ -37,21 +45,28 @@
         </button>
         <a class="navbar-brand" href="/">Emotional Recognition Honours Project</a>
         <div class="collapse navbar-collapse" id="navbar">
+            {% if current_user.is_authenticated and current_user.type == "patient" %}
             <div class="navbar-nav">
-                {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" id="therapy" href="/therapy_page">Therapy</a>
                 <a class="nav-item nav-link" id="questionnaires" href="/questionnaires_page">Questionnaires</a>
-                {% endif %}
             </div>
             <div class="navbar-nav ms-auto">
-                {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" id="profile" href="/profile_page">Profile</a>
                 <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-                {% else %}
+            </div>
+            {% elif current_user.is_authenticated and current_user.type == "therapist" %}
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" id="therapist_dash" href="/therapist_dash">Dashboard</a>
+            </div>
+            <div class="navbar-nav ms-auto">
+                <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+            </div>
+            {% else %}
+            <div class="navbar-nav ms-auto">
                 <a class="nav-item nav-link" id="register" href="/register_user">Register Account</a>
                 <a class="nav-item nav-link" id="login" href="/login">Login</a>
-                {% endif %}
             </div>
+            {% endif %}
         </div>
     </nav>
 
