--- a/app/templates/questionnaires/PHQ9.html
+++ b/app/templates/questionnaires/PHQ9.html
@@ -4,8 +4,33 @@
 
 {% if score %}
 
-{{ score }}
-{{ emotions }}
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    Questionnaire Results
+                </div>
+                <div class="card-body">
+                    <h5> PHQ-9 Score </h5>
+                    {{ score }}
+                    <h5> Emotions </h5>
+                    {{ emotions }}
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    <h3> Your Emotioanl Distribution </h3>
+                </div> 
+                <div class="card-body">
+                    <canvas id="pieChartCanvas" width="640" height="480"></canvas>
+                </div> 
+            </div>
+        </div>
+    </div>
+</div>
 
 {% else %}
 
@@ -82,5 +107,15 @@
 
 <script src="{{ url_for('static', filename='js/camera.js') }}"></script>
 <script src="{{ url_for('static', filename='js/questionnaire.js') }}"></script>
+<script src="{{ url_for('static', filename='js/visualisations/pie_chart.js') }}"></script>
+
+{% if score and emotions %}
+<script>
+    var context = document.getElementById('pieChartId').getContext('2d');
+    var emotionData = {{ emotions | tojson }};
+
+    createPieChart(context, emotionData);
+</script>
+{% endif %}
 
 {% endblock %}
