--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,8 @@
     <!-- Datatables JS -->
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 
+    <!-- Chart.js JS -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <title>{% block title %} Honours Project Application {% endblock %}</title>
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
@@ -70,26 +72,30 @@
         </div>
     </nav>
 
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-    {% for category, message in messages %}
+    {% with messages = get_flashed_messages(with_categories=true) %} 
+    {% if messages %} 
+    {% for category, message in messages %} 
     {% if category == 'error' %}
-    <div class="alert alert-danger alter-dismissable fade show" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {% else %}
-    <div class="alert alert-success alter-dismissable fade show" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {% endif %}
-    {% endfor %}
-    {% endif %}
+        <div class="alert alert-danger alter-dismissible fade show" role="alert">
+            <div class="d-flex justify-content-between align-items-center">
+                <span>{{ message }}</span>
+                <button type="button" class="btn-close" data-bs-dismiss="alert">
+                    <span aria-hidden="true"></span>
+                </button>
+            </div>
+        </div>
+        {% else %}
+        <div class="alert alert-success alter-dismissible fade show" role="alert">
+            <div class="d-flex justify-content-between align-items-center">
+                <span> {{ message }}</span>
+                <button type="button" class="btn-close" data-bs-dismiss="alert">
+                  <span aria-hidden="true"></span>
+                </button>
+            </div>
+        </div>
+    {% endif %} 
+    {% endfor %} 
+    {% endif %} 
     {% endwith %}
 
     <main>
