Further work, started focusing on therapy session functionality

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -21,6 +21,10 @@
                         </div>
                         <br />
                         <div class="form-group">
+                            <a href="{{ url_for('auth.register_user') }}">Don't have an account? Click here to register.</a>
+                        </div>
+                        <br />
+                        <div class="form-group">
                             {{ form.submit(class="btn btn-secondary") }}
                         </div>
                     </form>
