--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -5,22 +5,10 @@
 
 {% block content %}
 
-<div class="container-fluid px-0">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="p-5 bg-primary text-white centered">
-                Mental Health
-            </div>
-        </div>
+<header class="masthead bg-primary text-white text-center">
+    <div class="container d-flex align-items-center flex-column">
+        <h1 class="masthead-heading mb-0">hi</h2>
     </div>
-    <div class="row">
-        <div class="col-6">
-            1
-        </div>
-        <div class="col-6">
-            2
-        </div>
-    </div>
-</div>
+</header>
 
 {% endblock %}
