--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -5,10 +5,10 @@
 
 {% block content %}
 
-<header class="masthead bg-primary text-white text-center">
-    <div class="container d-flex align-items-center flex-column">
-        <h1 class="masthead-heading mb-0">hi</h2>
+<div class="container">
+    <div class="col-12">
+        <h2> Honours Emotional Recognition Application </h2>
     </div>
-</header>
+</div>
 
 {% endblock %}
